--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 </head>
 
 <body class="root">
-    <header class="header">Our Pricing
+    <header class="header">
+        <h1 class="header__title">Our Pricing</h1>
         <div class="toggle">
             <label>Annually
             </label>
@@ -36,7 +37,7 @@
     <!-- cards -->
     <section class="cards">
         <div class="card shadow">
-            <ul>
+            <ul class="pack__list">
                 <li class="pack">Basic</li>
                 <li id="basic" class="price bottom-bar">&dollar; 199.99</li>
                 <li class="bottom-bar">500 GB Storage</li>
@@ -49,7 +50,7 @@
         </div>
 
         <div class="card active">
-            <ul>
+            <ul class="pack__list">
                 <li class="pack">Professional</li>
                 <li id="basic" class="price bottom-bar">&dollar; 249.99</li>
                 <li class="bottom-bar">1 TB Storage</li>
@@ -62,7 +63,7 @@
         </div>
 
         <div class="card shadow">
-            <ul>
+            <ul class="pack__list">
                 <li class="pack">Master</li>
                 <li id="basic" class="price bottom-bar">&dollar; 399.99</li>
                 <li class="bottom-bar">2 TB Storage</li>
