add button hover, cursor pointer

--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
 </head>
 
 <body class="root">
-
     <header class="header">
         <h1 class="header__title">Our Pricing</h1>
         <div class="toggle">
-            <label>Annually
+            <label class="sub-length">Annually
             </label>
             <div class="toggle-button">
                 <input type="checkbox" id="checkbox" class="checkbox">
@@ -30,7 +29,7 @@
                     <div class="circle"></div>
                 </label>
             </div>
-            <label>Monthly</label>
+            <label class="sub-length">Monthly</label>
         </div>
     </header>
 
@@ -57,7 +56,7 @@
                     <li class="bottom-bar">5 Users Allowed</li>
                     <li class="bottom-bar">Send up to 10 GB</li>
                     <li class="button">
-                        <button class="btn">Learn More</button>
+                        <button class="btn active-btn">Learn More</button>
                     </li>
                 </ul>
             </div>
@@ -76,5 +75,4 @@
             </div>
         </section>
 </body>
-
 </html>
